git add -Agit add -Agit add -A

--- a/index.html
+++ b/index.html
@@ -69,7 +69,58 @@
                
             </form>
         </section>
-        <section></section>
+        <section class="benefits">
+            <h2 class="benefits__title">Наши преимущества</h2>
+            <ul class="benefits__list">
+                <li class="benefits__list-item">
+                    <img src="./images/Group.png" alt="" class="list-item-img">
+                    <h2 class="benefits__list-item-text-title">Растоможка груза</h2>
+                    <p class="benefits__list-item-text">
+                        Мы берём на себя все формальности и бумажную волокиту, 
+                        связанную с растаможкой груза
+                    </p> 
+                </li>
+                <li class="benefits__list-item">
+                    <img src="./images/Package.png" alt="" class="list-item-img">
+                    <h2 class="benefits__list-item-text-title">Надёжная упаковка</h2>
+                    <p class="benefits__list-item-text">
+                        Все товары упаковываются нашими специалистами с особым вниманием к деталям,
+                        гарантируя, что они дойдут в безопасности и в отличном состоянии
+                    </p> 
+                </li>
+                <li class="benefits__list-item">
+                    <img src="./images/Delivery.png" alt="" class="list-item-img">
+                    <h2 class="benefits__list-item-text-title">Быстро и выгодно</h2>
+                    <p class="benefits__list-item-text">
+                        Мы предлагаем быструю и выгодную доставку, чтобы вы могли 
+                        насладиться покупками как можно скорее.
+                    </p> 
+                </li>
+                <li class="benefits__list-item">
+                    <img src="./images/best support.png" alt="" class="list-item-img">
+                    <h2 class="benefits__list-item-text-title">Удобный сервис</h2>
+                    <p class="benefits__list-item-text">
+                        Стремимся сделать процесс доставки максимально удобным для вас, 
+                        чтобы опыт остался приятным и беззаботным
+                    </p> 
+                </li>
+                <li class="benefits__list-item">
+                    <img src="./images/clear info.png" alt="" class="list-item-img">
+                    <h2 class="benefits__list-item-text-title">Прозрачность работы</h2>
+                    <p class="benefits__list-item-text">
+                        Мы предоставляем полный контроль над каждым этапом доставки, 
+                        от момента заказа до момента прибытия заказа
+                    </p> 
+                </li>
+                <li class="benefits__list-item">
+                    <img src="./images/garantee.png" alt="" class="list-item-img">
+                    <h2 class="benefits__list-item-text-title">Страхование груза</h2>
+                    <p class="benefits__list-item-text">
+                        Наше страхование обеспечивает полную защиту и покрытие почти все неприятные и неожиданные ситуации
+                    </p> 
+                </li>
+            </ul>
+        </section>
         <section></section>
         <section></section>
         <section></section>
